we can only hope